# SeetaFaceEngine

./: README.md
FaceAlignment/: CMakeLists.txt
FaceAlignment/src/test/: face_alignment_test.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/src/test/: CMakeLists.txt
